Fix spacing issue between images

--- a/src/styles/LastYear.less
+++ b/src/styles/LastYear.less
@@ -79,6 +79,9 @@
                 margin-bottom: 80px;
                 font-family: Poppins;
             }
+            p {
+                margin-bottom: 30px;
+            }
 
             // The image previews of the event.
             .image-group {
